--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Testing.
+            I HAVE NO IDEA WHAT TO PUT HERE.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
