[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             I HAVE NO IDEA WHAT TO PUT HERE.
+            <h4>DISGUSS</h4>
+            I have made a really small change.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
