[imad-console] Updates ui/page-one.html

--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -1,3 +1,28 @@
 <html>
-
-</htl>
+    <head>
+        <title>LuL WELCOME TO WHATEVER THIS IS LuL</title>
+    </head>
+    <body>
+        <div>
+        <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            IDK WHAT THIS IS NUMBER ONE.
+        </h3>
+        <div>
+            September 10/Sweet 16
+        </div>
+        <div>
+            <p>
+                Idk what to put here but here is a lifehack.
+            </p>
+            <p>
+                Did u know if u don't die u can live?WELL NOW YOU KNOW SO USE THIS INFORMATION PROPERLY AFTER ALL WITH GREAT POWA COMES GREAT RESPONSIBILIY.WEW
+            </p>
+            <p>
+                LULLULULULULULULLULLULULULULULULULULULULULLULULULULULULULULULULULULULLULULULULULULULLULULULULULULULULLULULULULULLULULULULULLULULULULLULULULULLULULULULULLULULULULLULULULULULLULULULLULULULULLULULULULULULLULULULLULULULULULLULULULU
+         </p>
+        </div>
+    </body>
+</html>
