[imad-console] Updates ui/page-one.html

--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -2,9 +2,18 @@
     <head>
         <title>LuL WELCOME TO WHATEVER THIS IS LuL</title>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <style>
+            .container {
+                max-width: 900px;
+                margin: 0output;
+                color:blue;
+                font-family:comic-sans;
+            }
+        </style>
     </head>
     <body>
-        <div>
+        <div class="contaitner"></div>
+               <div>
         <a href="/">Home</a>
         </div>
         <hr/>
