[imad-console] Updates ui/page-one.html

--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -6,7 +6,7 @@
             .container {
                 max-width: 900px;
                 margin: 0output;
-                color:blue;
+                color:grey;
                 font-family:comic-sans;
             }
         </style>
