--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -12,7 +12,7 @@
         </style>
     </head>
     <body>
-        <div class="contaitner"></div>
+        <div class="contaitner">
                <div>
         <a href="/">Home</a>
         </div>
@@ -33,6 +33,7 @@
             <p>
                 LULLULULULULULULLULLULULULULULULULULULULULLULULULULULULULULULULULULULLULULULULULULULLULULULULULULULULLULULULULULLULULULULULLULULULULLULULULULLULULULULULLULULULULLULULULULULLULULULLULULULULLULULULULULULLULULULLULULULULULLULULULU
          </p>
+        </div>
         </div>
     </body>
 </html>
