[imad-console] Updates ui/page-one.html

--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -5,9 +5,9 @@
         <style>
             .container {
                 max-width: 900px;
-                margin: 0output;
+                margin: 0 auto;
                 color: grey;
-                font-family: comic-sans;
+                font-family: sans-serif;
             }
         </style>
     </head>
